# tide

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  brief.md
.github/workflows/: release.yml
crates/tide-app/: Cargo.toml
crates/tide-app/src/: action.rs  behavior_tests.rs  browser_pane.rs  diff.rs  diff_pane.rs  drag_drop.rs  editor_pane.rs  event_handler.rs  event_loop.rs  file_tree.rs  gpu.rs  header.rs  layout_compute.rs  lsp_integration.rs  main.rs  pane.rs  render_thread.rs  rendering.rs  search.rs  session.rs  settings.rs  theme.rs  ui.rs  ui_state.rs  update.rs  workspace.rs
crates/tide-core/: Cargo.toml
crates/tide-core/src/: lib.rs
crates/tide-editor/: Cargo.toml
crates/tide-editor/src/: buffer.rs  cursor.rs  input.rs  (+4 more)
crates/tide-input/: Cargo.toml
crates/tide-layout/: Cargo.toml
crates/tide-lsp/: Cargo.toml
crates/tide-lsp/src/: client.rs  install.rs  lib.rs  manager.rs  protocol.rs  transport.rs
crates/tide-renderer/: Cargo.toml
crates/tide-renderer/src/: atlas.rs  chrome.rs  font.rs  grid.rs  init.rs  lib.rs  msdf.rs  overlay.rs  shaders.rs
crates/tide-terminal/: Cargo.toml
crates/tide-tree/: Cargo.toml
docs/: glossary.md
docs/domain/: app.md  core-types.md
docs/specs/: lsp-completion.md  terminal-context.md
docs/testing/: behavior-tests.md
scripts/: build-dmg.sh  bundle.sh  entitlements.plist
site/: index.html  package-lock.json  package.json
site/src/: App.tsx  index.css
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  wrangler.toml
web/src/: App.tsx  index.css
(+48 files in other folders)
