[package]
name = "tide-lsp"
description = "LSP client for Tide"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
log = "0.4"
