[package]
name = "tide-renderer"
description = "GPU renderer for the Tide terminal (wgpu + cosmic-text)"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tide-core = { workspace = true }
wgpu = "23"
cosmic-text = "0.12"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"
unicode-width = "0.2"
fdsm = "0.8"
fdsm-ttf-parser = "0.2"
ttf-parser = "0.25"
nalgebra = "0.34"
image = "0.25"
fontdb = "0.16"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-text = "21"
